# mecha-ctl

cli/src/battery/: cmd.rs
libs/battery-ctl/: Cargo.toml
libs/bluetooth-ctl/: Cargo.toml
libs/device-info-ctl/: Cargo.toml
libs/device-info-ctl/src/: device_info.rs
libs/device-metrics-ctl/: Cargo.toml
libs/display_ctl/: Cargo.toml
libs/led_ctl/: Cargo.toml
libs/motion-sensor-ctl/: Cargo.toml
libs/wireless-ctl/: Cargo.toml
