[package]
name = "mecha_battery_ctl"
description = "battery interface for mecha-device"
version = "0.1.0"
documentation = "https://docs.mecha.so"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-ctl"
homepage = "https://mecha.so"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8.1"
