[package]
name = "mecha_metrics_ctl"
version = "0.1.0"
documentation = "https://docs.mecha.so"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-ctl"
homepage = "https://mecha.so"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
sysinfo = "0.29.10"
tracing = "0.1"

[dev-dependencies]
mockall = "0.11.4"
