[package]
name = "mecha_display_ctl"
version = "0.1.0"
documentation = "https://docs.mecha.so"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mecha-ctl"
homepage = "https://mecha.so"
description = "mecha device display ctl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1"

[dev-dependencies]
mockall = "0.11.4"
